--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "~15.4.0",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
+    "firebase": "9.6.11",
     "react": "18.0.0",
     "react-native": "0.69.6"
   },
